[gd_scene load_steps=2 format=3 uid="uid://c8p4u5yqjbqx4"]

[ext_resource type="Script" uid="uid://df0qapeeoahmq" path="res://addons/godot_core_system/examples/input_demo/input_state/combo_demo.gd" id="1_yvxu8"]

[node name="ComboDemo" type="CanvasLayer"]
script = ExtResource("1_yvxu8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "输入状态系统演示"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0
text = "输入状态系统就绪"

[node name="ComboDisplay" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 86.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "连击数：0"
horizontal_alignment = 1

[node name="HoldIndicator" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 96.0
offset_right = -72.0
offset_bottom = 123.0
grow_horizontal = 2

[node name="HoldLabel" type="Label" parent="UI/HoldIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -29.5
offset_right = -12.0
offset_bottom = -3.5
grow_horizontal = 2
grow_vertical = 2
text = "长按进度"
horizontal_alignment = 1

[node name="InputLog" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -66.0
offset_right = 264.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
text = "输入日志"
editable = false

[node name="Controls" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -260.0
offset_right = 272.0
offset_bottom = -229.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ClearLogButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "清除日志"

[node name="ResetComboButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "重置连击"

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 220.0
offset_bottom = 240.0
text = "操作说明：
空格键：拳击
回车键：踢腿
Tab键：长按蓄力
连击窗口：0.5秒
长按阈值：0.5秒"

[connection signal="pressed" from="UI/Controls/ClearLogButton" to="." method="_on_clear_log_pressed"]
[connection signal="pressed" from="UI/Controls/ResetComboButton" to="." method="_on_reset_combo_pressed"]
